# FEPy

./: README.md  example_5p14.py  main.py  pyproject.toml  setup.py  test.bdf  test_fepy.py
doc/: FEpy.md
fepy/: boundary.py  boundarycondition.py  core.py  domain.py  element.py  elements.py  fem.py  femcore.py  field.py  grid.py  interp.py  io.py  model.py  node.py  operator.py  quadrature.py  solvers.py  space.py  test_fepy.py
fepy/mesh/: generator.py  parser.py
src/: boundarycondition.py  element.py  femcore.py  femparser.py  femutils.py  fepy.py  input.txt  ioutils.py  node.py
test/example_5p14/: example_5p14.bdf  example_5p14.geo  example_5p14.msh  example_5p14.py
test/square_1el/: square.geo  square.msh  square.py
test/square_4el/: square.geo  square.msh
tests/2x2square/: 2x2square.geo  2x2square.msh  2x2square.py
tests/example_5p14/: example_5p14.bdf  example_5p14.geo  example_5p14.ipynb  example_5p14.msh  example_5p14.py
tests/quad_and_tri/: quad_and_tri.msh  quad_and_tri.py
