[tool.poetry]
name = "fepy"
version = "0.1.0"
description = "Simple finite element solver in Python"
authors = ["b1llg <guyb1294@gmail.com>"]
license = "\"GPL-3.0-only\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
scipy = "^1.11.4"
pytest = "^7.4.4"
meshio = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
